--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Run Unit Tests
         run: npm test
 
-  build-and-deploy:
+  build:
     needs: test
     # handling multiple instances at once
     concurrency: ci-${{ github.ref }}
@@ -37,7 +37,22 @@ jobs:
         run: |
           npm ci
           npm run build
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: dist-files
+          path: dist
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get Build Artifacts
+        uses: actions/download-artificats@v3
+        with:
+          name: dist-files
+          path: ~/download/dist
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: dist
+          folder: ~/download/dist
