--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -51,8 +51,9 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist-files
-          path: ~/download/dist
+          path: ./dist
       - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@v4
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          folder: ~/download/dist
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          folder: ./dist
