remove extraneous step

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -37,23 +37,7 @@ jobs:
         run: |
           npm ci
           npm run build
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: dist-files
-          path: dist
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Get Build Artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: dist-files
-          path: ./dist
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          folder: ./dist
+          folder: dist
